24.1.2 업로드된 후 다운로드 처리 진행...